src/objects/Filter_Rule__mdt.object
<CustomObject>
    <description>Individual Filter Rules for each Filter Group</description>
    <label>Filter Rule</label>
    <pluralLabel>Filter Rules</pluralLabel>
    <fields>
        <fullName>Constant__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <metadataRelationshipControllingField>Filter_Rule__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Filter_Rules</relationshipLabel>
        <relationshipName>Filter_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Filter_Group__c</fullName>
        <label>Filter Group</label>
        <referenceTo>Filter_Group__mdt</referenceTo>
        <relationshipLabel>Filter Rules</relationshipLabel>
        <relationshipName>Filter_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Filter_Rules</relationshipLabel>
        <relationshipName>Filter_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                    <default>true</default>
                    <label>Equals</label>
                </value>
                <value>
                    <fullName>Not_Equals</fullName>
                    <label>Not Equals</label>
                </value>
                <value>
                    <fullName>Greater</fullName>
                    <label>Greater Than</label>
                </value>
                <value>
                    <fullName>Less</fullName>
                    <label>Less Than</label>
                </value>
                <value>
                    <fullName>Greater_or_Equal</fullName>
                    <label>Greater or Equal</label>
                </value>
                <value>
                    <fullName>Less_or_Equal</fullName>
                    <label>Less or Equal</label>
                </value>
                <value>
                    <fullName>Starts_With</fullName>
                    <label>Starts With</label>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does_Not_Contain</fullName>
                    <label>Does Not Contain</label>
                </value>
                <value>
                    <fullName>In_List</fullName>
                    <label>In List</label>
                </value>
                <value>
                    <fullName>Not_In_List</fullName>
                    <label>Not In List</label>
                </value>
                <value>
                    <fullName>Is_Included</fullName>
                    <label>Is Included</label>
                </value>
                <value>
                    <fullName>Is_Not_Included</fullName>
                    <label>Is Not Included</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>